--- a/public/global.css
+++ b/public/global.css
@@ -1,19 +1,47 @@
-html, body {
+:root {
+	--background: white;
+	--canvas-background: white;
+	--color: #333;
+}
+
+@media (prefers-color-scheme: dark) {
+	:root:not([data-theme]),
+	:root[data-theme='auto'] {
+		--background: #333;
+		--canvas-background: #666;
+		--color: white;
+	}
+}
+
+:root[data-theme='dark'] {
+	--background: #333;
+	--canvas-background: #555;
+	--color: white;
+}
+
+* {
 	position: relative;
+	box-sizing: border-box;
+}
+
+html,
+body {
 	width: 100%;
 	height: 100%;
 }
 
 body {
-	color: #333;
 	margin: 0;
-	padding: 8px;
-	box-sizing: border-box;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+		Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
+
+	background-color: var(--background);
+	color: var(--color);
+	transition: background 500ms ease-in-out, color 200ms ease;
 }
 
 a {
-	color: rgb(0,100,200);
+	color: rgb(0, 100, 200);
 	text-decoration: none;
 }
 
@@ -22,14 +50,17 @@ a:hover {
 }
 
 a:visited {
-	color: rgb(0,80,160);
+	color: rgb(0, 80, 160);
 }
 
 label {
 	display: block;
 }
 
-input, button, select, textarea {
+input,
+button,
+select,
+textarea {
 	font-family: inherit;
 	font-size: inherit;
 	-webkit-padding: 0.4em 0;
@@ -60,4 +91,32 @@ button:not(:disabled):active {
 
 button:focus {
 	border-color: #666;
+}
+
+.flow > * {
+	margin-top: 16px;
+}
+
+.flow > :first-child {
+	margin-top: 0;
+}
+
+.hr-flow > * + * {
+	margin-left: 8px;
+}
+
+.flex {
+	display: flex;
+}
+
+.bold {
+	font-weight: bold;
+}
+
+.select-none {
+	user-select: none;
+}
+
+.text-center {
+	text-align: center;
 }
